--- a/app/src/main/res/layout/fragment_sample_card.xml
+++ b/app/src/main/res/layout/fragment_sample_card.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true">
@@ -32,7 +33,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <RelativeLayout
+    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
         android:id="@+id/rlCardContents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +43,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:animateLayoutChanges="true">
+        app:ael_expanded="false"
+        app:ael_duration="500"
+        app:ael_interpolator="bounce"
+        app:ael_orientation="vertical">
 
         <!-- The content of the expanded card should be here -->
         <TextView
@@ -50,5 +54,5 @@
             android:layout_height="wrap_content"
             android:text="@string/lorem_ipsum_long"/>
 
-    </RelativeLayout>
+    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
 </RelativeLayout>
