--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="card_header_padding">10dp</dimen>
+
+    <dimen name="fragment_horizontal_margin">10dp</dimen>
+    <dimen name="fragment_horizontal_padding">10dp</dimen>
 </resources>
