--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.exotikosteam.exotikos.activities.MainActivity">
 
-
-    <Button
-    android:text="Open Travel Status"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:id="@+id/btnTravelStatus" />
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:id="@+id/frgPlaceholder"
-        android:layout_below="@id/btnTravelStatus"
         >
 
     </FrameLayout>
-
 </RelativeLayout>
