--- a/app/src/main/res/layout/travel_summary_fragment.xml
+++ b/app/src/main/res/layout/travel_summary_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
@@ -85,5 +86,47 @@
         android:layout_alignStart="@+id/tvDepartureTime2"
         android:id="@+id/tvArrivalTime2" />
 
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:srcCompat="@drawable/departure"
+        android:layout_alignTop="@+id/tvDepartureTime1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="41dp"
+        android:layout_marginEnd="41dp"
+        android:id="@+id/ivDeparture" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/stopover"
+        android:id="@+id/ivStopOver"
+        android:layout_alignTop="@+id/tvArrivalTime1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="23dp"
+        android:layout_marginEnd="23dp" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:srcCompat="@drawable/arrivals"
+        android:id="@+id/ivArrival"
+        android:layout_alignTop="@+id/tvArrivalTime2"
+        android:layout_alignLeft="@+id/ivDeparture"
+        android:layout_alignStart="@+id/ivDeparture" />
+
+    <Button
+        android:text="Start the Trip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnTravelStatus"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="11dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="11dp" />
 
 </RelativeLayout>
