--- a/app/src/main/res/layout/travel_summary_fragment.xml
+++ b/app/src/main/res/layout/travel_summary_fragment.xml
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
     android:orientation="vertical" android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context = ".TravelSummaryFragment">
 
     <TextView
         android:text="January 19, 2017 "
@@ -130,3 +131,4 @@
         android:layout_marginBottom="11dp" />
 
 </RelativeLayout>
+</layout>
