--- a/app/src/main/res/layout/item_airline.xml
+++ b/app/src/main/res/layout/item_airline.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="android.view.View" />
         <variable name="airline" type="com.exotikosteam.exotikos.models.airline.Airline"/>
     </data>
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/airline_item_padding">
 
-        <TextView
-            tools:text="Arline Name"
-            android:text='@{airline.name}'
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:id="@+id/ivAirlineImage"
+            tools:src="@drawable/ic_add_24dp"
+            app:imageUrl='@{airline.iconUrl}'
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/tvName"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:descendantFocusability="blocksDescendants"
+            android:focusable="false"
+            android:layout_marginRight="@dimen/airline_item_padding" />
 
         <TextView
             tools:text="AA"
@@ -31,6 +34,17 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:id="@+id/tvIATACode" />
+
+        <TextView
+            tools:text="Airline Name"
+            android:text='@{airline.name}'
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvName"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_alignBottom="@+id/ivAirlineImage"
+            android:layout_toRightOf="@+id/ivAirlineImage"
+            android:layout_toEndOf="@+id/ivAirlineImage" />
 
     </RelativeLayout>
 </layout>
