--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -15,13 +15,27 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.exotikosteam.exotikos.activities.NewTripActivity">
 
+        <Button
+            android:text="@string/new_trip_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/btnScan" />
+
+        <TextView
+            android:text="@string/new_trip_scan_boarding_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvScanBoardingPass"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/btnScan"/>
+
         <TextView
             android:text="@string/airline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_below="@id/tvScanBoardingPass"
             android:id="@+id/tvAirline" />
 
         <Button
@@ -72,25 +86,17 @@
             android:layout_below="@+id/tvDepartureDate"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_centerHorizontal="true"
             android:id="@+id/dpDepartureDate"
             android:calendarViewShown="false" />
 
-        <TextView
-            android:text="@string/new_trip_scan_boarding_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvScanBoardingPass"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/dpDepartureDate"/>
-
         <Button
-            android:text="@string/new_trip_scan"
+            android:text="@string/new_trip_select_flight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvScanBoardingPass"
+            android:layout_below="@id/dpDepartureDate"
             android:layout_centerHorizontal="true"
-            android:id="@+id/btnScan" />
-
+            android:id="@+id/btnSelectFlights" />
 
     </RelativeLayout>
 
