--- a/app/src/main/res/layout/fragment_travel_prep.xml
+++ b/app/src/main/res/layout/fragment_travel_prep.xml
@@ -5,11 +5,22 @@
         android:layout_height="match_parent">
 
 
+        <Button
+            android:text="HELP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnHelp"
+            android:layout_below="@+id/btnLaunchScanPage"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="12dp" />
+
         <TextView
+            android:layout_below="@id/btnHelp"
             android:text="Pre Flight Information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
@@ -117,6 +128,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="12dp" />
+
+
 
 
     </RelativeLayout>
