--- a/app/src/main/res/layout/activity_travel_status.xml
+++ b/app/src/main/res/layout/activity_travel_status.xml
@@ -31,17 +31,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
-        <!--<FrameLayout-->
-            <!--android:id="@+id/flCard4"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"/>-->
+        <FrameLayout
+            android:id="@+id/flCard4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
-        <!--<FrameLayout-->
-            <!--android:id="@+id/flCard5"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"/>-->
+        <FrameLayout
+            android:id="@+id/flCard5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 </ScrollView>
