--- a/app/src/main/res/layout/fragment_travel_prep.xml
+++ b/app/src/main/res/layout/fragment_travel_prep.xml
@@ -131,7 +131,7 @@
             android:layout_alignParentStart="true" />
 
         <TextView
-            tools:text="Boardng in 32 Days"
+            tools:text="Boarding in 32 Days"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
