more cardlayout work

--- a/app/src/main/res/layout/fragment_travel_prep.xml
+++ b/app/src/main/res/layout/fragment_travel_prep.xml
@@ -3,8 +3,7 @@
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:layout_height="wrap_content">
 
 
         <TextView
