--- a/app/src/main/res/layout/fragment_travel_prep.xml
+++ b/app/src/main/res/layout/fragment_travel_prep.xml
@@ -1,5 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -108,22 +109,11 @@
             android:id="@+id/tvDestination"
             android:layout_alignTop="@+id/tvDestinationLbl" />
 
-        <Button
-            android:text="@string/findAiport"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnAirportPage"
-            android:layout_below="@+id/tvDestinationLbl"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="27dp" />
-
         <TextView
             tools:text="Checkin before 31Days"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-            android:background="@android:color/holo_green_light"
             android:id="@+id/tvCheckinDaysLeft"
             android:layout_below="@+id/btnAirportPage"
             android:layout_alignParentLeft="true"
@@ -135,10 +125,19 @@
             android:layout_height="wrap_content"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
             android:id="@+id/tvBoarding"
-            android:background="@android:color/holo_green_dark"
             android:layout_below="@+id/tvCheckinDaysLeft"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="@dimen/fragment_horizontal_margin"/>
+
+        <Button
+            android:background="@drawable/google_maps"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/btnAirportPage"
+            android:gravity="end"
+            android:layout_below="@+id/tvDestination"
+            android:layout_alignLeft="@+id/tvDestination"
+            android:layout_alignStart="@+id/tvDestination" />
     </RelativeLayout>
 </layout>
