--- a/app/src/main/res/layout/activity_travel_status.xml
+++ b/app/src/main/res/layout/activity_travel_status.xml
@@ -5,18 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
-    <!--
-    <RelativeLayout
-        android:id="@+id/activity_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.exotikosteam.exotikos.activities.MainActivity">
-    -->
+    tools:context="com.exotikosteam.exotikos.activities.TravelStatusActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,8 +21,7 @@
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.exotikosteam.exotikos.activities.TravelStatusActivity">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:id="@+id/activity_travel_status"
@@ -82,7 +70,4 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/drawer_view" />
-    <!--
-    </RelativeLayout>
-    -->
 </android.support.v4.widget.DrawerLayout>
