--- a/app/src/main/res/layout/item_flight.xml
+++ b/app/src/main/res/layout/item_flight.xml
@@ -6,120 +6,168 @@
         <import type="android.view.View" />
         <variable name="flight" type="com.exotikosteam.exotikos.models.trip.Flight"/>
     </data>
-    <RelativeLayout
+    <com.daimajia.swipe.SwipeLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/airline_item_padding">
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/ivAirlineImage"
-            tools:src="@drawable/ic_add_24dp"
-            app:imageUrl='@{flight.airlineIconUrl}'
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:descendantFocusability="blocksDescendants"
-            android:focusable="false"
-            android:layout_marginRight="@dimen/airline_item_padding" />
+        swipe:leftEdgeSwipeOffset="0dp"
+        swipe:rightEdgeSwipeOffset="0dp">
 
-        <TextView
-            tools:text="Airline Name"
-            android:text='@{flight.flightCarrierName}'
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/ivAirlineImage"
-            android:layout_toEndOf="@+id/ivAirlineImage"
-            android:id="@+id/tvAirlineName" />
-
-        <TextView
-            tools:text="XY123"
-            android:text='@{flight.flightCarrier + flight.flightNumber}'
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/tvAirlineName"
-            android:layout_toEndOf="@+id/tvAirlineName"
-            android:layout_marginLeft="5dp"
-            android:id="@+id/tvFlightNumber" />
-
-        <TextView
-            tools:text="FROM"
-            android:text='@{flight.departureCity}'
-            android:textStyle="italic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/tvAirlineName"
-            android:layout_toRightOf="@+id/ivAirlineImage"
-            android:layout_toEndOf="@+id/ivAirlineImage"
-            android:id="@+id/tvFromAirport" />
-
-        <TextView
-            tools:text="XXX"
-            android:text='@{flight.departureAirportIATA}'
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvFromAirport"
-            android:layout_toRightOf="@+id/ivAirlineImage"
-            android:layout_toEndOf="@+id/ivAirlineImage"
-            android:id="@+id/tvFromCode" />
-
-        <TextView
-            tools:text="0:00AM"
-            app:asShortTime='@{flight.departureTime}'
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvFromCode"
-            android:layout_toRightOf="@+id/ivAirlineImage"
-            android:layout_toEndOf="@+id/ivAirlineImage"
-            android:id="@+id/tvFromTime" />
-
-        <View
+        <!-- Swipe view -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_toRightOf="@+id/tvFromAirport"
-            android:layout_toLeftOf="@+id/tvToAirport"
-            android:layout_alignBaseline="@id/tvFromAirport"
-            android:background="@color/colorAccent"/>
+            android:layout_height="80dp"
+            android:background="#FF5534"
+            android:gravity="center"
+            android:padding="@dimen/card_header_padding"
+            android:weightSum="10">
 
+            <ImageView
+                android:id="@+id/trash"
+                android:layout_width="27dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_close_24dp"
+                android:tint="@android:color/primary_text_dark"/>
 
-        <TextView
-            tools:text="TO"
-            android:text='@{flight.arrivalCity}'
-            android:textStyle="italic"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="@string/delete_trip"
+                android:textColor="#fff"
+                android:textSize="17sp" />
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="4"
+                android:background="#ffffff"
+                android:text="@string/yes_delete"
+                android:textColor="#FF5534" />
+        </LinearLayout>
+
+        <!-- Main view -->
+        <RelativeLayout
+            android:id="@+id/rlContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvFromAirport"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/tvToAirport" />
+            android:padding="@dimen/airline_item_padding"
+            android:background="@android:color/background_light"
+            android:clickable="true">
 
-        <TextView
-            tools:text="XXX"
-            android:text='@{flight.arrivalAirportIATA}'
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvToAirport"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/tvToCode" />
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:id="@+id/ivAirlineImage"
+                tools:src="@drawable/ic_add_24dp"
+                app:imageUrl='@{flight.airlineIconUrl}'
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:descendantFocusability="blocksDescendants"
+                android:focusable="false"
+                android:layout_marginRight="@dimen/airline_item_padding" />
 
-        <TextView
-            tools:text="0:00AM"
-            app:asShortTime='@{flight.arrivalTime}'
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvToCode"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/tvToTime" />
+            <TextView
+                tools:text="Airline Name"
+                android:text='@{flight.flightCarrierName}'
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/ivAirlineImage"
+                android:layout_toEndOf="@+id/ivAirlineImage"
+                android:id="@+id/tvAirlineName" />
 
-    </RelativeLayout>
+            <TextView
+                tools:text="XY123"
+                android:text='@{flight.flightCarrier + flight.flightNumber}'
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/tvAirlineName"
+                android:layout_toEndOf="@+id/tvAirlineName"
+                android:layout_marginLeft="5dp"
+                android:id="@+id/tvFlightNumber" />
+
+            <TextView
+                tools:text="FROM"
+                android:text='@{flight.departureCity}'
+                android:textStyle="italic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_below="@+id/tvAirlineName"
+                android:layout_toRightOf="@+id/ivAirlineImage"
+                android:layout_toEndOf="@+id/ivAirlineImage"
+                android:id="@+id/tvFromAirport" />
+
+            <TextView
+                tools:text="XXX"
+                android:text='@{flight.departureAirportIATA}'
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvFromAirport"
+                android:layout_toRightOf="@+id/ivAirlineImage"
+                android:layout_toEndOf="@+id/ivAirlineImage"
+                android:id="@+id/tvFromCode" />
+
+            <TextView
+                tools:text="0:00AM"
+                app:asShortTime='@{flight.departureTime}'
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvFromCode"
+                android:layout_toRightOf="@+id/ivAirlineImage"
+                android:layout_toEndOf="@+id/ivAirlineImage"
+                android:id="@+id/tvFromTime" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_toRightOf="@+id/tvFromAirport"
+                android:layout_toLeftOf="@+id/tvToAirport"
+                android:layout_alignBaseline="@id/tvFromAirport"
+                android:background="@color/colorAccent"/>
+
+
+            <TextView
+                tools:text="TO"
+                android:text='@{flight.arrivalCity}'
+                android:textStyle="italic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/tvFromAirport"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/tvToAirport" />
+
+            <TextView
+                tools:text="XXX"
+                android:text='@{flight.arrivalAirportIATA}'
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvToAirport"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/tvToCode" />
+
+            <TextView
+                tools:text="0:00AM"
+                app:asShortTime='@{flight.arrivalTime}'
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvToCode"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/tvToTime" />
+
+        </RelativeLayout>
+    </com.daimajia.swipe.SwipeLayout>
 </layout>
