--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
+
         <Button
             android:id="@+id/btnFindWeight"
             android:layout_width="wrap_content"
@@ -42,6 +43,7 @@
             android:layout_alignParentRight="true"
             android:layout_below="@id/tvRepack"
             android:text="@string/btn_ask_nfor_help" />
+
         <TextView
             android:id="@+id/tvFindCheckIn"
             android:layout_width="wrap_content"
@@ -63,14 +65,22 @@
             android:text="@string/check_in_passport"/>
 
         <Button
+            android:id="@+id/btnNext"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/tvPassport"
+            android:background="@drawable/arrow_right_bold_circle" />
+
+        <Button
             android:id="@+id/btnCheckInScan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/tvPassport"
+            android:layout_below="@id/btnNext"
             android:text="@string/check_in_scan"/>
-
 
     </RelativeLayout>
 </layout>
